# primarch

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RESEARCH_BRIEF.md  UPGRADE.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  shell_integration.rs
src-tauri/src/git/: diff.rs  history.rs  mod.rs  repository.rs  watcher.rs
src-tauri/src/pty/: mod.rs  session.rs  shells.rs
src-tauri/src/workspace/: config.rs  mod.rs  storage.rs
src/assets/: main.css
src/components/git/: BranchSelector.vue  CommitHistory.vue  CommitPanel.vue  DiffHunk.vue  DiffViewer.vue  FileChangeItem.vue  GitSidebar.vue
src/components/layout/: ContextMenu.vue  LayoutPresetPicker.vue  LayoutTree.ts  PaneContainer.vue  SplitPane.vue  TabBar.vue  presets.ts
src/components/palette/: CommandPalette.vue
src/components/settings/: SettingsPanel.vue
src/components/terminal/: SearchBar.vue  ShellSelector.vue  TerminalPane.vue
src/components/viewer/: MarkdownViewer.vue
src/components/workspace/: WorkspaceManager.vue
src/composables/: useTerminal.ts  useUpdater.ts
src/stores/: git.ts  layout.ts  settings.ts  workspace.ts
src/themes/: presets.ts
src/types/: index.ts
src/utils/: aliases.ts  fuzzyMatch.ts  recentDirectories.ts
src/utils/markdownRenderer/: buffer.ts  index.ts  parser.ts  renderer.ts  types.ts
