[package]
name = "mythicor-terminal"
version = "0.1.0"
description = "A workspace-aware terminal emulator"
authors = ["casey"]
edition = "2021"

[lib]
name = "mythicor_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

# Git integration
git2 = { version = "0.18", features = ["ssh", "https"] }
notify = "6.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
] }
ntapi = "0.4"
